--- a/r-references.bib
+++ b/r-references.bib
@@ -33,6 +33,30 @@ doi = {10.1007/s12187-014-9232-z},
   pages = {589-611},
 }
 
+@article{Boneau_1960,
+title = {The effects of violations of assumptions underlying the t test},
+  language = {en},
+  author = {Boneau, C.Alan},
+  journal = {Psychological Bulletin},
+  volume = {57},
+  number = {1},
+  year = {1960},
+  pages = {49-64},
+}
+
+@article{Box_1954,
+  title = {Some Theorems on Quadratic Forms Applied in the Study of Analysis of Variance
+Problems, I. Effect of Inequality of Variance in the One-Way Classification
+},
+  language = {en},
+  author = {Box, G.E.P.},
+  journal = {The annals of mathematical statistics},
+  volume = {25},
+  number = {2},
+  year = {1954},
+  pages = {290-302},
+}
+
 @article{Bradley_1978,
   title = { Robustness?},
   doi = {10.1111/j.2044-8317.1978.tb00581.x},
@@ -104,6 +128,21 @@ doi = {10.1007/s12187-014-9232-z},
   year = {2007},
   pages = {709-742},
 }
+
+@article{David_and_Johnson_1951,
+  title = {The effect of nonnormality on the power
+ function of the F-test in the analysis of variance},
+  doi = {10.2307/2332316},
+  language = {en},
+  author = {David, F. N. and Johnson, N. L.},
+  journal = {Biometrika},
+  volume = {38},
+  number = {1-2},
+  year = {1951},
+  pages = {43-57},
+}
+
+
 @article{DeCarlo_1997,
   title = {On the meaning and use of kurtosis},
   doi = {10.1037//1082-989x.2.3.292},
@@ -200,6 +239,19 @@ doi = {10.1007/s12187-014-9232-z},
   pages = {361-373},
 }
 
+@article{Harwell_et_al_1992,
+  title = {Summarizing Monte Carlo Results in Methodological Research: The One- and Two-Factor
+Fixed Effects ANOVA Cases},
+  doi = {},
+  language = {en},
+  author = {Harwell, Michael R. and Rubinstein, Elaine N. and Hayes, William S. and Olds, Corley C.},
+  journal = {Journal of Educational Statistics},
+  volume = {17},
+  number = {4},
+  year = {1992},
+  pages = {315-339},
+}
+
 @article{Henrich_et_al_2010,
   title = { Most people are not WEIRD },
   doi = {10.1038/466029a },
@@ -233,6 +285,44 @@ doi = {10.1007/s12187-014-9232-z},
   number={137},
   year = {2012},
   pages={1-9},
+}
+ 
+@article{Hsu_and_Feldt_1969,
+  title = {The Effect of Limitations on the Number of Criterion Score Values on the Significance
+Level of the F-Test},
+  doi = {10.3102/00028312006004515},
+  language = {en},
+  author = {Hsu, Tse-Chi and Feldt, Leonard S.},
+  journal = {American Educational Research Journal},
+  volume = {6},
+  number={4},
+  year = {1969},
+  pages={515-527},
+}
+
+@article{Keselman_et_al_1998,
+  title = {Statistical Practices of Educational Researchers: An Analysis of Their ANOVA, MANOVA,
+ and ANCOVA Analy},
+  doi = {},
+  language = {en},
+  author = {Keselman, H.J. and Huberty, Carl J. and Lix, Lisa M. and Olejnik, Stephen and Cribbie, Robert A. and Donahue, Barbara and Kowalchuk, Rhoda K. and Lowman, Laureen L. and Petoskey, Marta D. and Keselman, Joanne C. and Levin, Joel R.},
+  journal = {Review of Educational Research},
+  volume = {68},
+  number = {3},
+  year = {1998},
+  pages = {350-386},
+}
+
+@article{Knapp_and_Dixon_1950,
+  title = {Learning to Juggle: I. A Study to Determine the Effect of Two Different Distributions of Practice on Learning Efficiency},
+  doi = {10.1080/10671188.1950.10624864},
+  language = {en},
+  author = {Knapp, Clyde, G. and Dixon, W. Robert},
+  journal = {Research Quarterly. American Association for Health, Physical Education and Recreation},
+  volume = {21},
+  number = {3},
+  year = {1950},
+  pages = {331-340},
 }
 
 @article{Koeser_and_Sczesny_2014,
@@ -269,6 +359,13 @@ doi = {10.1007/s12187-014-9232-z},
   number = {4},
   year = {2010},
   pages = {684-688},
+}
+
+@phdthesis{Liu_2015,
+  author = {Liu, Hangcheng},
+  title = {Comparing Welch ANOVA, a Kruskal-Wallis test, and traditional ANOVA in case of heterogeneity of variance},
+  school={Virginia Commonwealth University},
+  year = {2015},
 }
 
 @article{Lix_Keselman_Keselman_1996,
@@ -353,6 +450,30 @@ doi = {10.1007/s12187-014-9232-z},
   year = {2011},
   pages = {58-71},
 }
+ 
+@article{Perezgonzalez_2015,
+  title = {Fisher, Neyman-Pearson or NHST? A tutorial for teaching data testing},
+  doi = {10.3389/fpsyg.2015.00223},
+  language = {en},
+  author = {Perezgonzalez, Jose D.},
+  journal = {frontiers in Psychology},
+  volume = {6},
+  number = {223},
+  year = {2015},
+  pages = {1-11},
+}
+
+@article{Quensel_1947,
+  title = {The Validity of the *z*-Criterion when the Variates are taken from Different Normal Populations},
+  doi = {10.1080/03461238.1947.10419648},
+  language = {en},
+  author = {Quensel, Carl-Erik},
+  journal = {Scandinavian Actuarial Journal},
+  volume = {30},
+  number = {1},
+  year = {1947},
+  pages = {44-55},
+}
 
 @article{Rasch_et_al_2011,
   title = {The two-sample t test: Pre-testing its assumptions does not pay off},
@@ -364,6 +485,18 @@ doi = {10.1007/s12187-014-9232-z},
   number = {1},
   year = {2011},
   pages = {219-231},
+}
+
+@article{Ratcliff_1979,
+  title = {Group reaction time distributions and an analysis of distribution statistics},
+  doi = {10.1037/0033-2909.86.3.446},
+  language = {en},
+  author = {Ratcliff, Roger},
+  journal = {Psychological Bulletin},
+  volume = {86},
+  number = {3},
+  year = {1979},
+  pages = {446-461},
 }
 
 @article{Ruxton_2006,
@@ -388,6 +521,29 @@ doi = {10.1007/s12187-014-9232-z},
   number = {3},
   year = {1997},
   pages = {271-286},
+}
+
+@article{Srivastava_1959,
+  title = {Effects of non-normality on the power of the analysis of variance test},
+  doi = {10.2307/2332813},
+  language = {en},
+  author = {Srivastava, A. B. L.},
+  journal = {Biometrika},
+  volume = {46},
+  number = {1-2},
+  year = {1959},
+  pages = {114-122},
+}
+
+@article{Tiku_1971,
+  title = {Power function of the F-test under non-normal situations},
+  doi = {10.1080/01621459.1971.10482371},
+  language = {en},
+  author = {Tiku, M.L.},
+  journal = {Journal of the American Statistical Association},
+  volume = {66},
+  year = {1971},
+  pages = {913-916},
 }
 
 @article{Tomarken_and_Serlin_1986,
@@ -425,6 +581,18 @@ doi = {10.1007/s12187-014-9232-z},
   pages = {330-336},
 }
 
+@article{Westfall_2014,
+  title = {Kurtosis as Peakedness, 1905-2014. R.I.P.},
+  doi = {10.1080/00031305.2014.917055},
+  language = {en},
+  author = {Westfall, Peter H.},
+  journal = {The American Statistician},
+  volume = {68},
+  number = {3},
+  year = {2014},
+  pages = {191-195},
+}
+
 @article{Wilcox_1998,
   title = { How many discoveries have been lost by ignoring modern statistical methods?},
   doi = {10.1037/0003-066x.53.3.300},
@@ -435,6 +603,18 @@ doi = {10.1007/s12187-014-9232-z},
   number = {3},
   year = {1998},
   pages = {300-314},
+}
+
+@article{Wilcox_2005,
+  title = {Comparing Medians: An Overview Plus New Results on Dealing With Heavy-Tailed Distributions},
+  doi = {10.3200/JEXE.73.3.249-263},
+  language = {en},
+  author = { Wilcox, R. R.},
+  journal = {The Journal of Experimental Education},
+  volume = {73},
+  number = {3},
+  year = {2005},
+  pages = {249-263},
 }
 
 @article{Wilcox_et_al_2013,
