--- a/Appendix.tex
+++ b/Appendix.tex
@@ -6,9 +6,10 @@
 
 \begin{appendix}
 \section{}
+\hypertarget{the-mathematical-development-of-the-f-test-w-test-and-f-test-numerical-example}{%
 \subsection{\texorpdfstring{The Mathematical Development of the
 \emph{F}-test, \emph{W}-test, and \emph{F}*-test: Numerical
-Example}{The Mathematical Development of the F-test, W-test, and F*-test: Numerical Example}}\label{the-mathematical-development-of-the-f-test-w-test-and-f-test-numerical-example}
+Example}{The Mathematical Development of the F-test, W-test, and F*-test: Numerical Example}}\label{the-mathematical-development-of-the-f-test-w-test-and-f-test-numerical-example}}
 
 A summary is presented in Table A1. The complete example is available on
 Github. The DV is a score that can vary from 0 to 40. The IV is a
