--- a/W-test.Rmd
+++ b/W-test.Rmd
@@ -69,9 +69,9 @@ render_appendix("Appendix.Rmd")
 
 When comparing independent groups researchers often analyze the means by performing a Student's *t*-test or classical Analysis of Variance (ANOVA) *F*-test [@Erceg-Hurn_Mirosevich_2008; @Keselman_et_al_1998; @Tomarken_and_Serlin_1986]. Both tests rely on the assumptions that independent and identically distributed residuals (1) are sampled from a normal distribution and (2) have equal variances between groups [or homoscedasticity; see @Lix_Keselman_Keselman_1996]. While a deviation from the normality assumption generally does not strongly affect either the Type I error rates [@Glass_et_al_1972; @Harwell_et_al_1992; @Tiku_1971] or the power of the *F*-test [@Harwell_et_al_1992; @David_and_Johnson_1951; @Srivastava_1959; @Tiku_1971],  the *F*-test is not robust against unequal variances [@Grissom_2000]. Unequal variances can alter both the Type I error rate [@Harwell_et_al_1992; @David_and_Johnson_1951] and statistical power [@Nimon_2012;@Overall_et_al_1995] of the *F*-test.
 
-Although it important to make sure test assumptions are met before a statistical test is performed, researchers rarely provide information about test assumptions when they report an *F*-test. We examined statistical tests reported in 116 articles in the *Journal of Personality and Social Psychology* published in the year 2016. Fourteen percent of these articles reported a One-Way *F*-test, but only one article indicated that the homogeneity of variances assumption was taken into account. They reported corrected degrees of freedom for unequal variances, which could signal the use of the *W*-test instead of the classical *F*-test. A similar investigation [@Hoekstra_et_al_2012] yielded conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the *F*-test is currently used by default, alternatives exist that are often a better choice, such as the Welch's *W* ANOVA (*W*-test), the Alexander-Govern test, James' second order test, and the Brown-Forsythe ANOVA (*F*\*-test). Although not the focus or the current article, additional tests exist that allow researchers to examine hypotheses about other relevant parameters of a distribution than the mean (such as standard deviations and the shape of the distribution [see for example @Erceg-Hurn_Mirosevich_2008; @Wilcox_1998]). However, since most researchers currenty generate hypotheses about differences between means [@Erceg-Hurn_Mirosevich_2008; @Keselman_et_al_1998], we think that a first realistic first step towards progress would be to get researchers to correctly test the hypothesis they are used to. 
+Although it important to make sure test assumptions are met before a statistical test is performed, researchers rarely provide information about test assumptions when they report an *F*-test. We examined statistical tests reported in 116 articles in the *Journal of Personality and Social Psychology* published in the year 2016. Fourteen percent of these articles reported a One-Way *F*-test, but only one article indicated that the homogeneity of variances assumption was taken into account. They reported corrected degrees of freedom for unequal variances, which could signal the use of the *W*-test instead of the classical *F*-test. A similar investigation [@Hoekstra_et_al_2012] yielded conclusions about the lack of attention to both the homoscedasticity and the normality assumptions. Despite the fact that the *F*-test is currently used by default, alternatives exist that are often a better choice, such as the Welch's *W* ANOVA (*W*-test), the Alexander-Govern test, James' second order test, and the Brown-Forsythe ANOVA (*F*\*-test). Although not the focus of the current article, additional tests exist that allow researchers to examine hypotheses about other relevant parameters of a distribution than the mean (such as standard deviations and the shape of the distribution [see for example @Erceg-Hurn_Mirosevich_2008; @Wilcox_1998]. However, since most researchers currenty generate hypotheses about differences between means [@Erceg-Hurn_Mirosevich_2008; @Keselman_et_al_1998], we think that a first realistic first step towards progress would be to get researchers to correctly test the hypothesis they are used to. 
 
-Although the debate surrounding the assumptions of the *F*-test has been widely explored [see for example the meta-analysis of @Harwell_et_al_1992], applied researchers still largely ignore the consequences of assumption violations. Non-mathematical pedagogical papers summarizing the arguments seems to be lacking from the literature, and the current paper aims to fill this gap. We will discuss the pertinence of the assumptions of the *F*-test, and focus on the question of heteroscedasticity (that, as we will see, can have major consequences on error rates). We will provide a non-mathematical explanation how alternatives to the classical *F*-test cope with heteroscedasticity violations. We conducted simulations in which we compare the *F*-test with the most promising alternatives. We argue that when variances are equal between groups, the *W*-test has nearly the same empirical Type I error rate and power as the *F*-test, but when variances are unequal, it provides empirical Type I and Type II error rates that are closer to the expected levels compared to the *F*-test. Since the *W*-test is available in practically all statistical software packages, researchers can immediately improve their statistical inferences by replacing the *F*-test by the *W*-test.
+Although the debate surrounding the assumptions of the *F*-test has been widely explored [see for example the meta-analysis of @Harwell_et_al_1992], applied researchers still largely ignore the consequences of assumption violations. Non-mathematical pedagogical papers summarizing the arguments seems to be lacking from the literature, and the current paper aims to fill this gap. We will discuss the pertinence of the assumptions of the *F*-test, and focus on the question of heteroscedasticity (that, as we will see, can have major consequences on error rates). We will provide a non-mathematical explanation of how alternatives to the classical *F*-test cope with heteroscedasticity violations. We conducted simulations in which we compare the *F*-test with the most promising alternatives. We argue that when variances are equal between groups, the *W*-test has nearly the same empirical Type I error rate and power as the *F*-test, but when variances are unequal, it provides empirical Type I and Type II error rates that are closer to the expected levels compared to the *F*-test. Since the *W*-test is available in practically all statistical software packages, researchers can immediately improve their statistical inferences by replacing the *F*-test by the *W*-test.
 
 # Normality and Homogeneity of variances under Ecological Conditions
 
@@ -85,21 +85,19 @@ First, while it is obvious that the mean can be changed by the treatment effects
  
 Second, prior to any experimental treatment, the presence of several subpopulations may lead to departures from the normality assumptions. Subgroup might exist that are unequal on some characteristics relevant to the measurements, that are not controlled within the studied group, which results in mixed distributions. This unavoidable lack of control is inherent of our field given its complexity. As an illustration, @Wilcox_2005 writes that pooling two normally-distributed populations that have the same mean but different variances (e.g. normally distributed scores for schizophrenic and not schizophrenic participants) could result in distributions that are very similar to the normal curve, but with thicker tails. As another example, when assessing a wellness score for the general population, data may be sampled from a left-skewed distribution, because most people are probably not depressed [see @Heun_et_al_1999]. In this case, people who suffer from depression and people who do not suffer from depression are part of the same population, which can leads to asymmetry in the distribution.   
 
-Third, bounded measures can also explain non-normal distributions. Examples can be found in the fields that analyze reaction time data, where measurements can be very large, but never below zero, which results in right-skewed distributions; see @Ratcliff_1979 for a discussion on the shape of reaction time distributions). In sum, there are many common situations in which normally distributed data is an unlikely assumption.
+Third, bounded measures can also explain non-normal distributions. Examples can be found in the fields that analyze reaction time data, where measurements can be very large, but never below zero, which results in right-skewed distributions; see @Ratcliff_1979 for a discussion on the shape of reaction time distributions. In sum, there are many common situations in which normally distributed data is an unlikely assumption.
 
 ## Homogeneity of Variances Assumption
 
 Homogeneity of variances (or homoscedasticity) is a mathematical requirement that is also ecologically unlikely [@Erceg-Hurn_Mirosevich_2008; @Grissom_2000]. In a previous paper [@Delacre_et_al_2017], we identified three different causes of heteroscedasticity: the variability inherent to the use of measured variables, the variability induced by quasi-experimental treatments on measured variables, and the variability induced by different experimental treatments on randomly assigned subjects. One additional source of variability is the presence of unidentified moderators [@Cohen_et_al_2013].
 
-First, psychologists, as many scholars from various fields in human sciences, often use measured variables (e.g. age, gender, educational level, ethnic origin, depression level, etc.) instead of random assignment to conditions. Prior to any treatment, parameters of pre-existing groups can vary largely from one population to another, as suggested by @Henrich_et_al_2010. For example, @Green_et_al_2005 have shown that the scores of competitiveness, self-reliance and interdependence are more variable in some ethnic groups than in others. This stands true for many pre-existing groups such as gender, cultures, or religions and for various outcomes [see for example @Adams_et_al_2014; @Beilmann_et_al_2014; @Church_et_al_2012; @Cohen_and_Hill_2007; @Haar_et_al_2014; @Montoya_Briggs_2013]. Moreover, groups are sometimes defined with the intention to have different variabilities. For example, as soon as a selective school admits its students based on the results of aptitude tests, the variability will be smaller compared to a school that accepts all students. In this example, the goal is not to alter the variability but is an inherent statistical implication of such theoretical positions.
+First, psychologists, as many scholars from various fields in human sciences, often use measured variables (e.g. age, gender, educational level, ethnic origin, depression level, etc.) instead of random assignment to conditions. Prior to any treatment, parameters of pre-existing groups can vary largely from one population to another, as suggested by @Henrich_et_al_2010. For example, @Green_et_al_2005 have shown that the scores of competitiveness, self-reliance and interdependence are more variable in some ethnic groups than in others. This stands true for many pre-existing groups such as gender, cultures, or religions and for various outcomes [see for example @Adams_et_al_2014; @Beilmann_et_al_2014; @Church_et_al_2012; @Cohen_and_Hill_2007; @Haar_et_al_2014; @Montoya_Briggs_2013]. Moreover, groups are sometimes defined with the intention to have different variabilities. For example, as soon as a selective school admits its students based on the results of aptitude tests, the variability will be smaller compared to a school that accepts all students. 
 
 Second, a quasi-experimental treatment can have different impacts on variances between pre-existing groups, that can even be of theoretical interest. For example, in the field of linguistics and social psychology, @Wasserman_and_Weseley_2009 investigated the impact of language gender structure on sexist attitudes of women and men. They tested differences between sexist attitude scores of subjects who read a text in English (i.e. a language without grammatical gender) or in Spanish (i.e. a language with grammatical gender). The results showed that (for a reason not explained by the authors), the women's score on the sexism dimension was more variable when the text was read in Spanish than in English ($SD_{spanish}=.80 > SD_{english}=.50$). For men, the reverse was true ($SD_{spanish}=.97 < SD_{english}=1.33$) \footnote{Note that this a didactic example, the differences have not been tested and might not differ statistically.}  
 
 Third, even when the variances of groups are the same before treatment (due to a complete succesful randomization in group assignment), unequal variances can emerge later, as a consequence of an experimental treatment [@Bryk_and_Raudenbush_1988;@Cumming_2013; @Erceg-Hurn_Mirosevich_2008;@Keppel_and_Wickens_2004;@Box_1954]. For example, @Koeser_and_Sczesny_2014 have compared arguments advocating either masculine generic or gender-fair language with control messages in order to test the impact of these conditions on the use of gender-fair wording (measured as a frequency). They report that the standard deviations increase after treatment in all experimental conditions.
 
-Fourth, more often than not, psychological processes are captured in situations where many variables are unidentified and/or left uncontrolled [@Cohen_et_al_2013]. Since some of these variables can act as moderators, they can generate heteroscedasticity.Indeed,  by definition, a moderator is a variable that will interact with factors, which implies that the effect of the moderator will be different in one condition of the factor than in another condition of the same factor.   
-
-To conclude, there are many common situations in which the homogeneity of variances assumption is unlikely to be true. 
+Fourth, more often than not, psychological processes are captured in situations where many variables are unidentified and/or left uncontrolled [@Cohen_et_al_2013]. Since some of these variables can act as moderators, they can generate heteroscedasticity. Indeed,  by definition, a moderator is a variable that will interact with factors, which implies that the effect of the moderator will be different in one condition of the factor than in another condition of the same factor.   
 
 # Consequences of Assumption Violations.
 
@@ -112,7 +110,7 @@ Regarding the Type II error rate, many authors underlined that departures from n
 
 ## Violation of Homogeneity of Variances Assumption
 
-Regarding the Type I error rate, the *F*-test is sensitive to unequal variances [@Harwell_et_al_1992]. More specifically, the higher the *SD*-ratio, the higher the impact. When there are only two groups, the impact is smaller than when there are more than two groups [@Harwell_et_al_1992]. When there are more than two groups, the *F*-test becomes more liberal, even when sample sizes are equal across groups [@Tomarken_and_Serlin_1986]. Moreover, when sample sizes are unequal, there is a strong effect of the sample size and variance pairing. In case of a positive pairing (i.e. the group with the larger sample size also has the larger variance), the test is too conservative, whereas in case of a negative pairing (i.e. the group with the larger sample size has the smaller variance), the test is too liberal [@Glass_et_al_1972; @Nimon_2012; @Overall_et_al_1995; @Tomarken_and_Serlin_1986].   
+Regarding the Type I error rate, the *F*-test is sensitive to unequal variances [@Harwell_et_al_1992]. More specifically, the more unequal the *SD* of the populations samples are extracted from, the higher the impact. When there are only two groups, the impact is smaller than when there are more than two groups [@Harwell_et_al_1992]. When there are more than two groups, the *F*-test becomes more liberal, meaning that the Type I error rate is larger than the nominal alpha level, even when sample sizes are equal across groups [@Tomarken_and_Serlin_1986]. Moreover, when sample sizes are unequal, there is a strong effect of the sample size and variance pairing. In case of a positive pairing (i.e. the group with the larger sample size also has the larger variance), the test is too conservative, meaning that the Type I error rate of the test is lower than the nomnial alpha level, whereas in case of a negative pairing (i.e. the group with the larger sample size has the smaller variance), the test is too liberal [@Glass_et_al_1972; @Nimon_2012; @Overall_et_al_1995; @Tomarken_and_Serlin_1986].   
 
 Regarding the Type II error rate, there is a small impact of unequal variances when sample sizes are equal [@Harwell_et_al_1992], but there is a strong effect of the sample size and variance pairing [@Nimon_2012; @Overall_et_al_1995]. In case of a positive pairing, the Type II error rate increases (i.e. the power decreases), and in case of a negative pairing, the Type II error decreases (i.e. the power increases). 
 
@@ -145,7 +143,7 @@ The *F*\* statistic proposed by @Brown_and_Forsythe_1974 is computed as follows:
 F^*= \frac{\sum_{j=1}^k[n_j(\bar{x_j}-\bar{x_{..}})^2]}{\sum_{j=1}^k [(1-\frac{n_j}{N})s_j^2]}
 (\#eq:BFstat)
 \end{equation} 
-Where $x_j$ and $s_j^2$ are respectively the group mean and the group variance, and $\bar{x_{..}}$ is the overall mean. As it can be seen in \@ref(eq:BFstat) the numerator of the *F*\* statistic is equal to the sum of squares between groups (which is equal to the numerator of the *F* statistic when one compares two groups). In the denominator, the variance of each group is weighted by 1 minus the relative frequency of each group. This adjustement implies that the variance associated with the group with the smallest sample size is given more weight compared to the *F*-test. As a result, when the larger variance is associated with the larger sample size, *F*\* is larger than *F*, because the denominator decreases, leading to more significant findings compared to the *F*-test. On the other hand, when the larger variance is associated with the smaller sample size, *F*\* is smaller than *F*, because the denominator increases, leading to fewer significant findings compared to the *F*-test. The degrees of freedom in the numerator and in the denominator of *F*\*-test are computed as follows (with the same principle as the denominator computation):
+Where $x_j$ and $s_j^2$ are respectively the group mean and the group variance, and $\bar{x_{..}}$ is the overall mean. As it can be seen in \@ref(eq:BFstat) the numerator of the *F*\* statistic is equal to the sum of squares between groups (which is equal to the numerator of the *F* statistic when one compares two groups). In the denominator, the variance of each group is weighted by 1 minus the relative frequency of each group. This adjustement implies that the variance associated with the group with the smallest sample size is given more weight compared to the *F*-test. As a result, when the larger variance is associated with the larger sample size, *F*\* is larger than *F*, because the denominator decreases, leading to more significant findings compared to the *F*-test. On the other hand, when the larger variance is associated with the smaller sample size, *F*\* is smaller than *F*, because the denominator increases, leading to fewer significant findings compared to the *F*-test. The degrees of freedom in the numerator and in the denominator of *F*\*-test are computed as follows (with the same principle as the denominator computation of the *F\** statistic):
 \begin{equation} 
 df_n= k-1
 (\#eq:BFnumDF)
@@ -179,7 +177,7 @@ When there are only two groups to compare, the *F*\*-test and *W*-test are ident
 
 We performed Monte Carlo simulations using R (version 3.5.0) to assess the Type I and Type II error rates for the three tests. One million datasets were generated for 3840 scenarios that address the arguments present in the literature. In 2560 scenarios, means were equal across all groups (i.e. the null hypothesis is true), in order to assess the Type I error rate of the tests. In 1280 scenarios, there were differences between means (i.e. the alternative hypothesis is true) in order to assess the power of the tests. In all scenarios, when using more than 2 samples, all samples but one was generated from the same population, and only one group had a different population mean. 
 
-Population parameter values were chosen in order to illustrate the consequences of factors known to play a key role on both the Type I error rate and the statistical power when performing an ANOVA. Based on the literature review presented above, we manipulated the number of groups, the sample sizes, the sample size ratio, the *SD*-ratio, and the sample size and variance pairing. In our scenarios, the number of compared groups (*k*) varied from 2 to 5. Sample sizes of *k*-1 groups ($n_j$) were 20, 30, 40, 50, or 100. The sample size of the last group was a function of the sample size ratio (*n*-ratio = $\frac{n_k}{n_j}$), ranging from 0.5 to 2, in steps of 0.5. The simulations for which the *n*-ratio equals 1 are known as a balanced design (i.e. sample sizes are equal across all groups). The *SD* of the population from which was extracted last group was a function of the *SD*-ratio (*SD*-ratio = $\frac{\sigma_k}{\sigma_j}$), with values of 0.5, 1, 2 or 4. The simulations for which the *SD*-ratio equals 1 are the particular case of homoscedasticity (i.e. equal variances across groups).
+Population parameter values were chosen in order to illustrate the consequences of factors known to play a key role on both the Type I error rate and the statistical power when performing an ANOVA. Based on the literature review presented above, we manipulated the number of groups, the sample sizes, the sample size ratio, the *SD*-ratio (*SD*-ratio = $\frac{\sigma_k}{\sigma_j}$), and the sample size and variance pairing. In our scenarios, the number of compared groups (*k*) varied from 2 to 5. Sample sizes of *k*-1 groups ($n_j$) were 20, 30, 40, 50, or 100. The sample size of the last group was a function of the sample size ratio (*n*-ratio = $\frac{n_k}{n_j}$), ranging from 0.5 to 2, in steps of 0.5. The simulations for which the *n*-ratio equals 1 are known as a balanced design (i.e. sample sizes are equal across all groups). The *SD* of the population from which was extracted last group was a function of the *SD*-ratio, with values of 0.5, 1, 2 or 4. The simulations for which the *SD*-ratio equals 1 are the particular case of homoscedasticity (i.e. equal variances across groups).
 
 All possible combinations of *n*-ratio and *SD*-ratio were performed in order to distinguish positive pairings (the group with the largest sample size is extracted from the population with the largest *SD*), negative pairings (the group with the smallest sample size is extracted from the population with the  smallest *SD*), and no pairing (sample sizes and/or population *SD* are equal across all groups). All these conditions were tested with normal and non-normal distributions. When two groups are compared, conclusions for the three ANOVA tests (*F*, *F*\*, *W*) should yield identical error rates when compared to their equivalent *t*-tests [the *F*-test is equivalent to Student's *t*-test, and the *F*\*-test and *W*-test are equivalent to Welch's *t*-test; @Delacre_et_al_2017]. When there are more than three groups, the *F*-test becomes increasingly liberal as soon as the variances of the distributions in each group are not similar, even when sample sizes are equal between groups [@Harwell_et_al_1992; @Quensel_1947].  
  
@@ -204,23 +202,23 @@ Table 1.
 
 ## Type I Error Rate of the *F*-test, *W*-test, and *F*\*-test
 
-As previously mentioned, the Type I error rate ($\alpha$) long run frequency of observing significant results when the null-hypothesis is true. When means are equal across all groups the Type I error rate of all test should be equal to the nominal alpha level. We assessed the Type I error rate of the *F*-test, *W*-test and *F\**-test under 2560 scenarios using a nominal alpha level of 5%.
+As previously mentioned, the Type I error rate ($\alpha$) is the long run frequency of observing significant results when the null-hypothesis is true. When means are equal across all groups the Type I error rate of all test should be equal to the nominal alpha level. We assessed the Type I error rate of the *F*-test, *W*-test and *F\**-test under 2560 scenarios using a nominal alpha level of 5%.
 
-When there is no difference between mean the 9 cells of Table 1 simplify into 5 subconditions:  
+When there is no difference between means, the 9 cells of Table 1 simplify into 5 subconditions:  
 
--	Equal n and sd across groups (a)  
--	Unequal n but equal sd across groups (b and c)  
--	Unequal sd but equal n across groups (d and g)   
--	Unequal n and sd across groups, with positive correlation between n and sd (e and i)  
-- Unequal n and sd across groups, with negative correlation between n and sd (f and h)    
+-	Equal *n* and *sd* across groups (a)  
+-	Unequal *n* but equal *sd* across groups (b and c)  
+-	Unequal *sd* but equal *n* across groups (d and g)   
+-	Unequal *n* and *sd* across groups, with positive correlation between *n* and *sd* (e and i)  
+- Unequal *n* and *sd* across groups, with negative correlation between *n* and *sd* (f and h)    
 
 In Figure 1, we computed the average Type I error rate of the three tests under these 5 subcategories. The light grey area corresponds to the liberal criterion from @Bradley_1978, who regards a departure from the nominal alpha level as acceptable whenever the Type I error rate falls within the interval [$.5 \times \alpha$; $1.5 \times \alpha$]. The dark grey area corresponds to the more conservative criterion from which departures from the nominal alpha is considered  negligible as long as the Type I error rate falls within the interval [$.9 \times \alpha$; $1.1 \times \alpha$].
 
-```{r "", echo=FALSE, fig.width = 15,fig.height=8,out.width = '100%',fig.cap = "Type I error rate of the F-test, W-test and F*-test under 5 conditions. Top left: cell a in Table 1; top right: cells b and c; bottom left: cells d and g; bottom middle: cells e and i; bottom right: cells f and h. "}
+```{r "", echo=FALSE, fig.width = 100,fig.height=100,out.width = '100%',fig.cap = "Type I error rate of the F-test, W-test and F*-test under 5 conditions. Top left: cell a in Table 1; top right: cells b and c; bottom left: cells d and g; bottom middle: cells e and i; bottom right: cells f and h. "}
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig 1_after revision.PNG")
 ```
 
-In the two top plots in Figure 1 (see cells a, b, and c in Table 1), the population variance is equal between all groups, so the homoscedasticity assumption is met. The *F*-test and *F\**-test only marginally deviates from the nominal 5%, regardless of the underlying distribution and the *SD*-ratio. The *W*-tests also only marginally deviates from the nominal 5%, except under asymmetry (the tests becomes a little more sensitive) or extremely heavy tails (the test becomes a bit more conservative), consistent with observations in @Harwell_et_al_1992. However, deviations don't exceed the liberal criterion of @Bradley_1978.
+In the two top plots in Figure 1 (see cells a, b, and c in Table 1), the population variance is equal between all groups, so the homoscedasticity assumption is met. The *F*-test and *F\**-test only marginally deviates from the nominal 5%, regardless of the underlying distribution and the *SD*-ratio. The *W*-tests also only marginally deviates from the nominal 5%, except under asymmetry (the tests becomes a little more sensitive) or extremely heavy tails (the test becomes a bit more conservative), consistently with observations in @Harwell_et_al_1992. However, deviations don't exceed the liberal criterion of @Bradley_1978.
 
 In the three bottom plots in Figure 1 (cells d to i, Table 1) the population variance is unequal between groups, so that the homoscedasticity assumption is not met. When sample sizes are equal across groups (cells d and g, bottom left in Figure 1) and when there is a positive correlation between sample sizes and *SDs* (cells e and i, bottom center in Figure 1), the Type I error rate of the *W*-test is closer to the nominal 5% than the Type I error rate of the *F\**-test and the *F*-test, the latter which is consistently at the lower limit of the liberal interval suggested by Bradley, in line with @Harwell_et_al_1992, @Glass_et_al_1972, @Nimon_2012 and @Overall_et_al_1995. Heteroscedasticity does not impact the Type I error rate of the *W*-test, regardless of the distribution (the order of the distribution shape remains the same in all conditions). 
 
@@ -237,7 +235,7 @@ We can draw the following conclusions for the Type I error rate:
 
 ## Statistical power for the *F*-test, *W*-test, and *F*\*-test
 
-As previously mentioned, the statistical power (1-$\beta$) of a test is the long-run probability of observing a statistically significant result when there is a true effect in the population. We assessed the power of the *F*-test, *W*-test and *F\**-test under 1280 scenarios, while using the nominal alpha level of 5%. In all scenarios, the last group was extracted from a population of mean of one unit more than the means of the other groups. Because of this, in some scenarios there is a positive correlation between the *SD* and the mean (i.e. the last group has the largest *SD* and the largest mean) and in other scenarios, there is a negative correlation between *SD* and the mean (i.e. the last group has the smallest *SD* and the largest mean). As we know that the correlation between the *SD* and the mean matters for the *W*-test [see @Liu_2015], the 9 subconditions in Table 1 were analyzed separately.
+As previously mentioned, the statistical power (1-$\beta$) of a test is the long-run probability of observing a statistically significant result when there is a true effect in the population. We assessed the power of the *F*-test, *W*-test and *F\**-test under 1280 scenarios, while using the nominal alpha level of 5%. In all scenarios, the last group was extracted from a population that has a higher mean than the population from where were extracted all other groups ($\mu_k = \mu_j+1$). Because of this, in some scenarios there is a positive correlation between the *SD* and the mean (i.e. the last group has the largest *SD* and the largest mean) and in other scenarios, there is a negative correlation between *SD* and the mean (i.e. the last group has the smallest *SD* and the largest mean). As we know that the correlation between the *SD* and the mean matters for the *W*-test [see @Liu_2015], the 9 subconditions in Table 1 were analyzed separately.
 
 We computed two main outcomes: the consistency (Figure 2) and the power (Figure 3). The consistency refers to the relative difference between the observed power and the nominal power, divided by the expected power:
 \begin{equation} 
@@ -254,7 +252,7 @@ knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig2_after revision.P
 knitr::include_graphics("Rmarkdown folder/Rmarkdown inputs/Fig3_after revision.PNG")
 ```
 
-In the three top plots in Figures 2 and 3 (plots a, b and c), the population variance is equal between all groups, meaning that the homoscedasticity assumption is met. When distributions are normal, the *W*-test is slightly less powerful than the *F*-test and *F\**-test, even through differences are very small (always smaller than 3%). With all other distributions, the *W*-test is generally more powerful than the *F\**-test and *F*-test, even with heavy tailed distributions, which is in contrast with previous findings [@Wilcox_1998]. @Wilcox_1998 concluded that there is a loss of power when means from heavy-tailed distributions (e.g. double exponential or a mixed normal distribution) are compared to means from normal distributions. This finding is based on the argument that heavy-tailed distributions are associated with bigger standard deviations than normal distributions, and that the effect size for such distributions is therefore smaller [@Wilcox_2011]. However, this conclusion is based on a common conflation of kurtosis and the standard deviation, which are are completely independent [@DeCarlo_1997]. One can find distributions that have similar *SD*'s but different kurtosis (see Supplemental Material). Note that our observation on the power of the *W*-test is tempered by the fact that the consistency is a little smaller than the consistency of both other tests. Indeed, the *W*-test is more impacted by the distribution shape, in line with observations by @Harwell_et_al_1992. The *W*-test becomes generally more liberal when distributions underlying the data are not normal (especially with high kurtosis, or when asymmetries go in opposite directions). Note that differences between *W*-test and other tests, in terms of consistency, are very small.
+In the three top plots in Figures 2 and 3 (plots a, b and c), the population variance is equal between all groups, meaning that the homoscedasticity assumption is met. When distributions are normal, the *W*-test is slightly less powerful than the *F*-test and *F\**-test, even through differences are very small. With all other distributions, the *W*-test is generally more powerful than the *F\**-test and *F*-test, even with heavy tailed distributions, which is in contrast with previous findings [@Wilcox_1998]. @Wilcox_1998 concluded that there is a loss of power when means from heavy-tailed distributions (e.g. double exponential or a mixed normal distribution) are compared to means from normal distributions. This finding is based on the argument that heavy-tailed distributions are associated with bigger standard deviations than normal distributions, and that the effect size for such distributions is therefore smaller [@Wilcox_2011]. However, this conclusion is based on a common conflation of kurtosis and the standard deviation, which are completely independent [@DeCarlo_1997]. One can find distributions that have similar *SD*'s but different kurtosis (see Supplemental Material). However, while the *W*-test is more powerful than the *F*-test and the *F\**-test in many situations,it is a bit less consistent with theoretical expectations than both other tests in the sense that the *W*-test is generally more powerful than expected (especially with high kurtosis, or when asymmetries go in opposite directions). This is due to the fact that the *W*-test is more impacted by the distribution shape, in line with observations by @Harwell_et_al_1992. Note that differences between *W*-test and other tests, in terms of consistency, are very small. 
 
 In all but the three top plots in Figure 2 and 3 (plots d to i), the population variance is unequal between groups, meaning that the homoscedasticity assumption is not met. When sample sizes are equal across groups (plots d and g in Figure 2 and 3), the *F*-test and the *F\**-tests are equally powerful, and have the same consistency, whatever the correlation between the *SD* and the mean. On the other hand, the power of the *W*-test depends on the correlation between the *SD* and the mean [in line with @Liu_2015]. When the group with the largest mean has the largest variance (plot d in Figure 2 and 3), the largest deviation between group means and the general mean is given less weight, and as a consequence the *W*-test is less powerful than both other tests. At the same time, the test is slightly less consistent than both other tests. When the group with the largest mean has the smallest variance (plot g in Figure 2 and 3), the largest deviation between group means and the general mean is given more weight, and therefore the *W*-test is more powerful than both other tests. The test is also slightly more consistent than both other tests. 
 
