bibliography correction in Keselman's name

--- a/r-references.bib
+++ b/r-references.bib
@@ -305,7 +305,7 @@ Level of the F-Test},
  and ANCOVA Analy},
   doi = {},
   language = {en},
-  author = {Keselman, H.J. and Huberty, Carl J. and Lix, Lisa M. and Olejnik, Stephen and Cribbie, Robert A. and Donahue, Barbara and Kowalchuk, Rhoda K. and Lowman, Laureen L. and Petoskey, Marta D. and Keselman, Joanne C. and Levin, Joel R.},
+  author = {Keselman, H. and Huberty, Carl J. and Lix, Lisa M. and Olejnik, Stephen and Cribbie, Robert A. and Donahue, Barbara and Kowalchuk, Rhoda K. and Lowman, Laureen L. and Petoskey, Marta D. and Keselman, Joanne C. and Levin, Joel R.},
   journal = {Review of Educational Research},
   volume = {68},
   number = {3},
