Correction: Type I error with capital T

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -6,6 +6,9 @@
 
 \begin{appendix}
 \section{}
+\setlength{\parindent}{0.0in}
+\setlength{\leftskip}{0.0in}
+
 \hypertarget{the-mathematical-development-of-the-f-test-w-test-and-f-test-numerical-example}{%
 \subsection{\texorpdfstring{The Mathematical Development of the
 \emph{F}-test, \emph{W}-test, and \emph{F}*-test: Numerical
