--- a/r-references.bib
+++ b/r-references.bib
@@ -215,6 +215,20 @@ Problems, I. Effect of Inequality of Variance in the One-Way Classification
   pages = {321-339},
 }
 
+@article{Grey_and_Mathiews_2000,
+  title = {Effects of training on interpretation of emotional ambiguity},
+  doi = {10.1080/713755937},
+  language = {en},
+  author = {Grey, Susan and Mathews, Andrew},
+  journal = {THE QUARTERLY JOURNAL OF EXPERIMENTAL PSYCHOLOG},
+  volume = {53A},
+  number = {4},
+  year = {2000},
+  pages = {1143-1162},
+}
+ 
+
+
 @article{Grissom_2000,
   title = {Heterogeneity of variance in clinical data},
   doi = {10.1037//0022-006x.68.1.155},
@@ -311,18 +325,6 @@ Level of the F-Test},
   number = {3},
   year = {1998},
   pages = {350-386},
-}
-
-@article{Knapp_and_Dixon_1950,
-  title = {Learning to Juggle: I. A Study to Determine the Effect of Two Different Distributions of Practice on Learning Efficiency},
-  doi = {10.1080/10671188.1950.10624864},
-  language = {en},
-  author = {Knapp, Clyde, G. and Dixon, W. Robert},
-  journal = {Research Quarterly. American Association for Health, Physical Education and Recreation},
-  volume = {21},
-  number = {3},
-  year = {1950},
-  pages = {331-340},
 }
 
 @article{Koeser_and_Sczesny_2014,
