--- a/r-references.bib
+++ b/r-references.bib
@@ -220,15 +220,13 @@ Problems, I. Effect of Inequality of Variance in the One-Way Classification
   doi = {10.1080/713755937},
   language = {en},
   author = {Grey, Susan and Mathews, Andrew},
-  journal = {THE QUARTERLY JOURNAL OF EXPERIMENTAL PSYCHOLOG},
-  volume = {53A},
+  journal = {the quarterly journal of experimental psychology},
+  volume = {53},
   number = {4},
   year = {2000},
   pages = {1143-1162},
 }
  
-
-
 @article{Grissom_2000,
   title = {Heterogeneity of variance in clinical data},
   doi = {10.1037//0022-006x.68.1.155},
